# boat

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  NOTICE  README.md  cppcheck_after.txt  cppcheck_after_fixes.txt  cppcheck_final.txt  cppcheck_latest.txt  cppcheck_new.txt  cppcheck_new2.txt  cppcheck_new_run.txt  cppcheck_temp.txt  cppcheck_updated.txt  cppcheck_warnings.txt  mnist_benchmark_results.txt
.github/workflows/: ci.yml
benchmarks/: attention_performance.c  linear_regression.c
docs/: DLL-Export-Best-Practices.md  Windows-Compilation-Guide.md  ci_cd_guide.md  const_usage_guide.md  contribution_guide.md  cppcheck_1.txt  cppcheck_2.txt  developer_getting_started.md  huggingface_implementation.md  it8_5.txt  it_1.txt  it_10.txt  it_10_phase_2.txt  it_10_phase_2_2.txt  it_10_phase_2_4.txt  it_10_phase_2_5.txt  it_10_phase_2_7.txt  it_10_phase_2_8.txt  it_11.txt  it_13.txt  it_15.txt  it_16.txt  it_18.txt  it_19.txt  it_2.txt  it_21.txt  it_22.txt  it_23.txt  it_24.txt  it_25.txt  it_26.txt  it_28.txt  it_29.txt  it_3.txt  it_30.txt  it_5.txt  it_6.txt  it_8.txt  it_cnn_1.txt  it_mnist_it1.txt  (+54 more)
docs/iterations/: it_1.txt  it_10_phase_1.txt  it_10_phase_2_1.txt  it_10_phase_2_3.txt  it_10_phase_2_6.txt  it_12.txt  it_14.txt  it_15.txt  it_17.txt  it_20.txt  it_27.txt  it_4.txt  it_7.txt  it_8_phase_1.txt  it_8_phase_2.txt  it_8_phase_3.txt  it_9.txt  it_cnn.txt
docs/iterations/mnist/: it_21.txt  it_6.txt  it_7.txt  it_8.txt  it_mnist_it_16.txt  it_mnist_it_22.txt  it_mnist_it_23.txt  it_mnist_it_25.txt  it_mnist_it_26.txt  it_mnist_it_27.txt  it_mnist_it_28.txt  it_mnist_it_3.txt  it_mnist_it_6.txt  it_mnist_it_8.txt
docs/iterations/safetensors/: it_safetensors_1.txt  it_safetensors_13.txt  it_safetensors_16.txt  it_safetensors_17.txt  it_safetensors_22.txt  it_safetensors_23.txt  it_safetensors_24.txt  it_safetensors_25.txt  it_safetensors_27.txt  it_safetensors_28.txt  it_safetensors_29.txt  it_safetensors_3.txt  it_safetensors_30.txt  it_safetensors_32.txt  it_safetensors_33.txt  it_safetensors_34.txt  it_safetensors_36.txt  it_safetensors_38.txt  it_safetensors_39.txt  it_safetensors_4.txt  it_safetensors_40.txt  it_safetensors_41.txt  it_safetensors_44.txt  it_safetensors_45.txt  it_safetensors_47.txt  it_safetensors_48.txt  it_safetensors_53.txt  it_safetensors_55.txt  it_safetensors_59.txt  it_safetensors_6.txt  it_safetensors_60.txt  it_safetensors_61.txt  it_safetensors_63.txt  it_safetensors_64.txt  it_safetensors_65.txt  it_safetensors_67.txt  it_safetensors_69.txt  it_safetensors_7.txt  it_safetensors_70.txt  it_safetensors_72.txt  (+5 more)
docs/mnist_iterations/: it_1.txt  it_10.txt  it_15.txt  it_23.txt  it_3.txt
examples/: CMakeLists.txt  scheduler_usage.c
examples/mnist/: CLAUDE.md  CMakeLists.txt  it_11.txt  it_12.txt  it_13.txt  it_14.txt  it_16.txt  it_17.txt  it_18.txt  it_19.txt  it_2.txt  it_20.txt  it_22.txt  it_24.txt  it_4.txt  it_5.txt  it_9.txt  mnist.c  mnist_autodiff.c  mnist_data.py  test_relu.c  训练与推理命令指南.md
include/: boat.h
include/boat/: autodiff.h  data.h  export.h  graph.h  layers.h  loss.h  memory.h  model.h  ops.h  optimizers.h  packed.h  schedulers.h  tensor.h  version.h  version.h.in
include/boat/format/: huggingface.h  onnx.h  pytorch.h  tensorflow.h
include/boat/layers/: attention.h  norm.h
scripts/: benchmark_mnist.py  check_exports.py  clean_debug.py  convergence_test.py  fix_export.py  fix_missing_exports.py  simple_benchmark.py  verify_dll_exports.py
src/: autodiff.c
src/core/: error.c  memory.c  packed.c  tensor.c  version.c
src/format/: huggingface.c  onnx.c  pytorch.cpp  pytorch.cpp.backup2  tensorflow.c
src/graph/: edge.c  executor.c  graph.c  graph_private.h  node.c
src/layers/: attention.c  batchnorm.c  conv.c  dense.c  flatten.c  gru.c  lstm.c  norm.c  pool.c  relu.c  softmax.c
src/loss/: cross_entropy.c  huber.c  loss_common.c  mse.c
src/model/: graph_model.c  model.c  sequential.c
src/ops/: activation.c  arithmetic.c  linear.c
src/optimizers/: adagrad.c  adam.c  optimizer_common.c  rmsprop.c
src/schedulers/: cosine_annealing.c  lambda_lr.c  scheduler_common.c  schedulers_internal.h  step_lr.c
tests/: CMakeLists.txt  generate_test_model.py  test_attention_training.c  test_basic.c  test_conv_forward.c  test_dense_forward.c  test_layernorm_simple.c  test_model_graph_integration.c  test_pytorch_simple.c  test_safetensors.c  test_simple_model.pt  test_simple_model_state_dict.pth
tests/unit/: test_attention_gradient_check.c  test_autodiff.c  test_conv_gradient_check.c  test_export.c  test_gradient_check.c  test_graph_phase2.c  test_graph_phase3.c  test_layer_link.c  test_memory.c  test_optimizer_adagrad.c  test_optimizer_adam.c  test_optimizer_rmsprop.c  test_phase1.c  test_schedulers.c  test_simple.c  test_tensor.c  test_transpose.c
tools/: test_algorithm.c  test_broadcast_simple.c  test_default_graph.c  test_error.c  test_simple.c  test_transpose_debug.c  test_transpose_minimal.c  test_transpose_simple.c
